Bug 1667237 - bookmarks toolbar flickers on startup / new windows in some cases, r=florian,jaws
Differential Revision: https://phabricator.services.mozilla.com/D97712

UltraBlame original commit: af10a3ffbbd17443b54446ec5f39fb8531a010f0

--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -519,6 +519,37 @@ PersonalToolbar
 [
 collapsed
 =
+false
+]
+:
+not
+(
+[
+initialized
+]
+)
+>
+#
+personal
+-
+toolbar
+-
+empty
+{
+width
+:
+0
+;
+visibility
+:
+hidden
+;
+}
+#
+PersonalToolbar
+[
+collapsed
+=
 true
 ]
 .
